--- a/QuizShow.html
+++ b/QuizShow.html
@@ -43,20 +43,20 @@
 		</div>
 
 		<h4 class="text-center font-bold text-2xl mt-8 text-red-500">Q: <span id="kNo">😉</span></h4>
-		<h1 class="text-center font-mono font-extralight text-5xl mt-10" id="quest">Question</h1>
+		<h1 class="text-center font-sans font-normal text-5xl mt-10" id="quest">Question</h1>
 		<div>
 			<div class="flex flex-col items-center justify-center" id="obj">
 				<div id="obj1" class="flex justify-between items-center w-4/5">
-					<h1 class="w-1/2 font-mono font-extralight text-4xl mt-5 bg-red-100 rounded-sm px-4 py-5">(A) <span
+					<h1 class="w-1/2 font-sans font-normal text-4xl mt-5 bg-red-100 rounded-sm px-4 py-5">(A) <span
 							id="optA">Option A</span>
 					</h1>
-					<h1 class="w-1/2 font-mono font-extralight text-4xl mt-5 bg-yellow-100 rounded-sm px-4 py-5">
+					<h1 class="w-1/2 font-sans font-normal text-4xl mt-5 bg-yellow-100 rounded-sm px-4 py-5">
 						(B) <span id="optB">Option B</span></h1>
 				</div> <br>
 				<div id="obj2" class="flex justify-between items-center w-4/5">
-					<h1 class="w-1/2 font-mono font-extralight text-4xl mt-5 bg-green-100 rounded-sm px-4 py-5">
+					<h1 class="w-1/2 font-sans font-normal text-4xl mt-5 bg-green-100 rounded-sm px-4 py-5">
 						(C) <span id="optC">Option C</span></h1>
-					<h1 class="w-1/2 font-mono font-extralight text-4xl mt-5 bg-blue-100 rounded-sm px-4 py-5">(D)
+					<h1 class="w-1/2 font-sans font-normal text-4xl mt-5 bg-blue-100 rounded-sm px-4 py-5">(D)
 						<span id="optD">Option D</span>
 					</h1>
 				</div>
@@ -73,12 +73,103 @@
 		</form>
 	</aside>
 	<footer class="text-center text-xl absolute left-10 bottom-1">
-		<p>Crafted with 💖 by <a href="https://rayyantech.sgm.ng" class="text-blue-800 font-bold animate-pulse">Rayyan
+		<p>Crafted with <span id="love" class="cursor-pointer">💖</span> by <a href="https://rayyantech.sgm.ng"
+				class="text-blue-800 font-bold animate-pulse">Rayyan
 				Technologies</a></p>
 	</footer>
+	<!-- Modal -->
+	<div id="modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+		<div class="bg-white rounded-lg shadow-lg p-6 w-full h-full flex flex-col justify-center items-center">
+			<h2 class="text-2xl font-bold mb-4">Settings</h2>
+			<form id="formSettings" class="w-full max-w-md">
+				<div class="mb-4">
+					<label for="gsu" class="block text-sm font-medium text-gray-700">Google Sheet URL</label>
+					<input type="text" id="gsu" class="mt-1 block w-full p-2 border border-gray-300 rounded"
+						placeholder="Enter the quiz Google Sheet URL">
+				</div>
+				<div class="mb-4">
+					<label for="worksheet" class="block text-sm font-medium text-gray-700">WorkSheet</label>
+					<input type="text" id="worksheet" class="mt-1 block w-full p-2 border border-gray-300 rounded"
+						placeholder="Enter your preferred worksheet">
+				</div>
+				<div class="mb-4">
+					<label for="seconds" class="block text-sm font-medium text-gray-700">Seconds / Question</label>
+					<input type="text" id="seconds" class="mt-1 block w-full p-2 border border-gray-300 rounded"
+						placeholder="Enter your preferred seconds">
+				</div>
+				<!-- <div class="mb-4">
+					<label for="theme" class="block text-sm font-medium text-gray-700">Theme</label>
+					<select id="theme" class="mt-1 block w-full p ```html
+                <select id=" theme" class="mt-1 block w-full p-2 border border-gray-300 rounded">
+						<option value="light">Light</option>
+						<option value="dark">Dark</option>
+					</select>
+				</div> -->
+				<button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+			</form>
+			<button id="closeModal" class="bg-red-500 text-white px-4 py-2 rounded mt-4">Close</button>
+		</div>
+	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/easytimer@1.1.3/dist/easytimer.min.js"></script>
 	<script>
+		function extractSheetId(url) {
+			const regex = /\/d\/([a-zA-Z0-9-_]+)/; // Regular expression to match the sheet ID
+			const match = url.match(regex); // Execute the regex on the URL
+
+			return match ? match[1] : null; // Return the sheet ID or null if not found
+		}
+		// Function to load settings from localStorage
+		function loadSettings() {
+			const gsu = localStorage.getItem('gsu');
+			const worksheet = localStorage.getItem('worksheet');
+			const seconds = localStorage.getItem('seconds');
+
+			if (gsu) document.getElementById('gsu').value = gsu;
+			if (worksheet) document.getElementById('worksheet').value = worksheet
+
+			if (seconds) document.getElementById('seconds').value = seconds;
+		}
+
+		// Function to save settings to localStorage
+		document.getElementById('formSettings').addEventListener('submit', (e) => {
+			e.preventDefault();
+
+			const gsu = document.getElementById('gsu').value;
+			const worksheet = document.getElementById('worksheet').value;
+			const seconds = document.getElementById('seconds').value;
+
+			localStorage.setItem('gsu', gsu);
+			localStorage.setItem('worksheet', worksheet);
+			localStorage.setItem('seconds', seconds);
+			location.reload();
+			alert('Settings saved successfully!');
+		});
+
+		// Load settings when the page is loaded
+		window.onload = loadSettings;
+		// Get the emoji element and modal elements
+		const emoji = document.getElementById('love');
+		const modal = document.getElementById('modal');
+		const closeModal = document.getElementById('closeModal');
+
+		// Function to open the modal
+		emoji.addEventListener('click', () => {
+			modal.classList.remove('hidden');
+		});
+
+		// Function to close the modal
+		closeModal.addEventListener('click', () => {
+			modal.classList.add('hidden');
+		});
+
+		// Optional: Close the modal when clicking outside of it
+		modal.addEventListener('click', (e) => {
+			if (e.target === modal) {
+				modal.classList.add('hidden');
+			}
+		});
+
 		let quest = document.getElementById('quest');
 		let optA = document.getElementById('optA');
 		let optB = document.getElementById('optB');
@@ -88,8 +179,8 @@
 
 		async function fetchData() {
 			const baseUrl = 'https://sheet.spacet.me'
-			const sheetId = '15PL-fY1fCk77Z4V1pcmmYfmn-nuhVxahQWsCcC3aoz4'
-			const sheetName = 'ICT'
+			const sheetId = extractSheetId(localStorage.getItem('gsu'))
+			const sheetName = localStorage.getItem('worksheet')
 			const endpoint = `${baseUrl}/${sheetId}/${sheetName}.json`
 			const { values } = await fetch(endpoint)
 				.then(response => {
@@ -131,7 +222,7 @@
 			document.querySelector('#obj2').classList.remove('hidden')
 			document.querySelector('#obj3').classList.add('hidden')
 
-			let seconder = 10;
+			let seconder = parseInt(localStorage.getItem('seconds'));
 			quest.innerText = Q.Question;
 			optA.innerText = Q.Option_A;
 			optB.innerText = Q.Option_B;
@@ -168,7 +259,7 @@
 				document.querySelector('#obj1').classList.add('hidden')
 				document.querySelector('#obj2').classList.add('hidden')
 				document.querySelector('#obj3').classList.toggle('hidden')
-				document.querySelector('#obj3').innerHTML = `<h1 class="w-1/2 font-mono font-extralight text-4xl mt-5 bg-gray-100 rounded-sm px-4 py-5">(${Q.Answer}) <span
+				document.querySelector('#obj3').innerHTML = `<h1 class="w-1/2 font-sans font-normal text-4xl mt-5 bg-gray-100 rounded-sm px-4 py-5">(${Q.Answer}) <span
 							id="optA">${optionDValue}</span>
 					</h1>`
 				document.querySelector('#countdown').innerHTML = ('TIME UP!!');
